--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,3 +1,3 @@
 <h1>Editing book</h1>
-<%= render 'form' %><%= link_to 'Show', reader_bookshelf_path(@reader, @bookshelf) %> |
+<%= render 'form' %><%= link_to 'Show', reader_bookshelf_book_path(@reader, @bookshelf, @book) %> |
 <%= link_to 'Back', reader_bookshelf_path(@reader) %>
