--- a/app/views/bookshelves/new.html.erb
+++ b/app/views/bookshelves/new.html.erb
@@ -1,3 +1,5 @@
-<h1>New bookshelf</h1>
-<%= render 'form' %>
-<%= link_to 'Back', reader_bookshelves_path(@reader) %>
+<div class="container">
+    <h1>New bookshelf</h1>
+  <%= render 'form' %>
+  <%= link_to 'Back', reader_bookshelves_path(@reader), class:"btn btn-sm btn-block btn-primary" %>
+</div>
