--- a/app/views/bookshelves/show.html.erb
+++ b/app/views/bookshelves/show.html.erb
@@ -1,7 +1,9 @@
-<h1>Bookshelves for <%= @reader.firstname %></h1>
-<p>
-  <b>Bookshelf details:</b>
-  <%= @bookshelf.shelf_name %>
-</p>
-<%= link_to 'Edit', edit_reader_bookshelf_path(@reader, @bookshelf) %> |
-<%= link_to 'Back', reader_bookshelves_path(@reader) %>
+<div class="container">
+    <h1>Bookshelves for <%= @reader.firstname %></h1>
+  <p>
+    <b>Bookshelf details:</b>
+    <%= @bookshelf.shelf_name %>
+  </p>
+  <%= link_to 'Edit', edit_reader_bookshelf_path(@reader, @bookshelf), class:"btn btn-sm btn-block btn-primary" %>
+  <%= link_to 'Back', reader_bookshelves_path(@reader), class:"btn btn-sm btn-block btn-primary" %>
+</div>
