--- a/app/views/readers/edit.html.erb
+++ b/app/views/readers/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing Reader</h1>
+<div class="container">
+    <h1>Editing Reader</h1>
 
-<%= render 'form', reader: @reader %>
+  <%= render 'form', reader: @reader %>
 
-<%= link_to 'Show', @reader %> |
-<%= link_to 'Back', readers_path %>
+  <%= link_to 'Show', @reader, class:"btn btn-sm btn-block btn-primary" %>
+  <%= link_to 'Back', readers_path, class:"btn btn-sm btn-block btn-primary" %>
+</div>
