--- a/app/views/readers/new.html.erb
+++ b/app/views/readers/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Reader</h1>
+<div class="container">
+  <h1>New Reader</h1>
 
-<%= render 'form', reader: @reader %>
+  <%= render 'form', reader: @reader %>
 
-<%= link_to 'Back', readers_path %>
+  <%= link_to 'Back', readers_path, class:"btn btn-sm btn-block btn-primary" %>
+</div>
