--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -23,5 +23,5 @@
   </p>
 
   <%= link_to 'Edit', edit_reader_bookshelf_path(@reader, @bookshelf), class:"btn btn-sm btn-block btn-primary" %>
-  <%= link_to 'Back', reader_bookshelf_books_path(@reader, @bookshelf), class:"btn btn-sm btn-block btn-primary" %>
+  <%= link_to 'Back', reader_bookshelf_books_path(@reader, @bookshelf), class:"btn btn-sm btn-block btn-warning" %>
 </div>
