--- a/app/views/bookshelves/index.html.erb
+++ b/app/views/bookshelves/index.html.erb
@@ -17,5 +17,5 @@
   </table>
   <br />
   <%= link_to 'New Bookshelf', new_reader_bookshelf_path(@reader), class:"btn btn-sm btn-block btn-primary" %>
-  <%= link_to 'Back to Reader', @reader, class:"btn btn-sm btn-block btn-primary" %>
+  <%= link_to 'Back to Reader', @reader, class:"btn btn-sm btn-block btn-warning" %>
 </div>
