--- a/app/views/bookshelves/show.html.erb
+++ b/app/views/bookshelves/show.html.erb
@@ -5,5 +5,5 @@
     <%= @bookshelf.shelf_name %>
   </p>
   <%= link_to 'Edit', edit_reader_bookshelf_path(@reader, @bookshelf), class:"btn btn-sm btn-block btn-primary" %>
-  <%= link_to 'Back', reader_bookshelves_path(@reader), class:"btn btn-sm btn-block btn-primary" %>
+  <%= link_to 'Back', reader_bookshelves_path(@reader), class:"btn btn-sm btn-block btn-warning" %>
 </div>
