--- a/app/views/readers/edit.html.erb
+++ b/app/views/readers/edit.html.erb
@@ -4,5 +4,5 @@
   <%= render 'form', reader: @reader %>
 
   <%= link_to 'Show', @reader, class:"btn btn-sm btn-block btn-primary" %>
-  <%= link_to 'Back', readers_path, class:"btn btn-sm btn-block btn-primary" %>
+  <%= link_to 'Back', readers_path, class:"btn btn-sm btn-block btn-warning" %>
 </div>
