--- a/app/views/readers/new.html.erb
+++ b/app/views/readers/new.html.erb
@@ -3,5 +3,5 @@
 
   <%= render 'form', reader: @reader %>
 
-  <%= link_to 'Back', readers_path, class:"btn btn-sm btn-block btn-primary" %>
+  <%= link_to 'Back', readers_path, class:"btn btn-sm btn-block btn-warning" %>
 </div>
