--- a/app/views/readers/show.html.erb
+++ b/app/views/readers/show.html.erb
@@ -25,6 +25,6 @@
   <% end %>
 
   <%= link_to 'Edit Reader', edit_reader_path(@reader), class:"btn btn-sm btn-block btn-primary" %>
-  <%= link_to 'Back to Readers', readers_path, class:"btn btn-sm btn-block btn-primary" %>
   <%= link_to 'Show Bookshelves', reader_bookshelves_path(@reader), class:"btn btn-sm btn-block btn-primary" %>
+  <%= link_to 'Back to Readers', readers_path, class:"btn btn-sm btn-block btn-warning" %>
 </div>
