--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
     <h1>Editing book</h1>
   <%= render 'form' %><%= link_to 'Show', reader_bookshelf_book_path(@reader, @bookshelf, @book), class:"btn btn-sm btn-block btn-primary" %>
-  <%= link_to 'Back', reader_bookshelf_path(@reader), class:"btn btn-sm btn-block btn-primary" %>
+  <%= link_to 'Back', reader_bookshelf_path(@reader), class:"btn btn-sm btn-block btn-warning" %>
 </div>
