--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
     <h1>New book</h1>
   <%= render 'form' %>
-  <%= link_to 'Back', reader_bookshelves_path(@reader), class:"btn btn-sm btn-block btn-primary" %>
+  <%= link_to 'Back', reader_bookshelves_path(@reader), class:"btn btn-sm btn-block btn-warning" %>
 </div>
