fixed path issue for devise home

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,8 @@
     <div class="container">
     <nav role="navigation">
       <div class="inner">
-        <a href="#nav" class="nav-collapse" id="nav-collapse">Menu</a>
         <ul class="nav" id="nav">
-          <li><%= link_to "Home", root_path %> </li>
+          <li><%= link_to "Home", readers_path %> </li>
           <%= render 'devise/menu/registration_items' %>
           <%= render 'devise/menu/login_items' %>
         </ul>
