--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
     <h1><%= @bookshelf.shelf_name %></h1>
   <h2>contains <%= @bookshelf.count %> books</h2>
+  <p id="notice"><%= notice %></p>
 
   <p><strong>Title:</strong>
     <%= @book.title %>
