--- a/app/views/bookshelves/index.html.erb
+++ b/app/views/bookshelves/index.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
+  <p id="notice"><%= notice %></p>
     <h1>Bookshelves for <%= @reader.firstname + " " + @reader.lastname %></h1>
   <table>
      <tr>
