--- a/app/views/readers/show.html.erb
+++ b/app/views/readers/show.html.erb
@@ -4,9 +4,7 @@
   <p>
     <strong>Firstname:</strong>
     <%= @reader.firstname %>
-  </p>
-
-  <p>
+    &nbsp
     <strong>Lastname:</strong>
     <%= @reader.lastname %>
   </p>
